# RangeHaskell

./: .gitignore  CHANGELOG.md  README.md  build.sh  package.yaml  range.cabal
src/: Range.hs
test/: Spec.hs
